# usepod-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  agent.example.toml
.claude/skills/usepod-agent-setup/: SKILL.md
.github/workflows/: release-docker.yml  release.yml
install/: README.md  install.ps1  install.sh  start-from-scratch.sh  usepod-agent.service
src/: config.rs  discovery.rs  heartbeat.rs  identity.rs  job_executor.rs  lib.rs  main.rs  service.rs  setup.rs  ws_client.rs
src/backend/: http.rs  llamacpp.rs  lmstudio.rs  mod.rs  ollama.rs  openrouter.rs  venice.rs  vllm.rs
tests/: config_parsing.rs  discovery.rs  job_executor.rs
