[package]
name = "usepod-agent"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "Use Pod marketplace provider agent — connects local inference backends (vLLM, llama.cpp, LM Studio, Ollama) to the Use Pod coordinator and earns USDC for served jobs."
repository = "https://github.com/Sortis-AI/usepod-agent"
homepage = "https://usepod.ai"
readme = "README.md"
keywords = ["ai", "inference", "marketplace", "llm", "solana"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "usepod-agent"
path = "src/main.rs"

[lib]
name = "provider_agent"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time, IDs, errors
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"

# Crate-specific (latest stable as of 2026-05-02 per cargo info)
# rustls (not native-tls) so cargo-zigbuild cross-compile on linux runners
# doesn't pull in openssl-sys. webpki-roots embeds the Mozilla CA bundle so
# the resulting binary has no system-cert dependency.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
ed25519-dalek = { version = "2.2", features = ["rand_core", "pem", "pkcs8"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
toml = "1"
clap = { version = "4.6", features = ["derive"] }
directories = "6"
base64 = "0.22"
futures-util = "0.3"
prometheus = "0.14"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"
thiserror = "2"

# Cross-platform service-manager wrapper. Drives systemd (Linux), launchd
# (macOS), and Windows SCM via a single trait. Used by `usepod-agent service`.
service-manager = { version = "0.11", default-features = false }

# File-based log appender. Windows SCM doesn't capture stdout/stderr; on
# install we point the service at a log file via USEPOD_AGENT_LOG_FILE,
# and `init_tracing` redirects to it when present. macOS launchd captures
# stdout/stderr natively via plist directives, so this is mostly a Windows
# concern but enabled cross-platform for symmetry and dev-tracing.
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread", "test-util"] }
